Implement auth endpoints and workflow (#5)
* Add db configs and prisma

* Add prisma database

* Add db wait step

* Add other handlers

* Add error handling

* Add problem detail specs

* Create problem detail response types and errors

* Add error stack to problem detail

* Add stack to correct problem location

* Add compression

* Simplify user upsert

* Add test coverage for begin auth

* Implement siwe flow and tests

* Destroy session on complete

* Implement refresh token

* Add panther client id and secret

* Add more test coverage

* Standardize error message format

* Add more test coverage
