# data/openapi/openapi.yml
@@ -1,4 +1,4 @@
-openapi: 3.1.0
+openapi: 3.0.3
 info:
   title: sesame-bun API
   description: An API for sesame-bun
@@ -28,6 +28,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthBeginResponse'
+        '400':
+          $ref: '#/components/responses/400'
+        '422':
+          $ref: '#/components/responses/422'
+        '500':
+          $ref: '#/components/responses/500'
+
   /auth/complete:
     post:
       summary: Completes the authentication process
@@ -47,6 +54,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthCompleteResponse'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '422':
+          $ref: '#/components/responses/422'
+        '500':
+          $ref: '#/components/responses/500'
   /auth/refresh:
     post:
       summary: Gets a new access token using the refresh token
@@ -66,11 +81,113 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthCompleteResponse'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '422':
+          $ref: '#/components/responses/422'
+        '500':
+          $ref: '#/components/responses/500'
 components:
+  responses:
+    '400':
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/ValidationProblem'
+      description: Request cannot be processed due to malformed request syntax
+    '401':
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Problem'
+      description: Request was not processed due to authentication failure
+    '403':
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Problem'
+      description: Request was not processed due to authorization failure
+    '404':
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Problem'
+      description: Request was not processed due to resource not found
+    '422':
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Problem'
+      description: Request was formed correctly but errors ocurred during processing
+    '500':
+      content:
+        application/problem+json:
+          schema:
+            $ref: '#/components/schemas/Problem'
+      description: Request was not processed due to an internal server error
   schemas:
+    Problem:
+      description: A Problem Details object (RFC 9457)
+      type: object
+      required:
+        - type
+        - title
+        - status
+      properties:
+        type:
+          type: string
+          description: URI reference that identifies the problem type
+          default: about:blank
+        status:
+          type: integer
+          format: int32
+          description: HTTP status code generated by the origin server for this occurrence of the problem
+          minimum: 400
+          maximum: 600
+          exclusiveMaximum: true
+        title:
+          type: string
+          description: A short, human-readable summary of the problem type
+        detail:
+          type: string
+          description: A human-readable explanation specific to this occurrence of the problem
+        instance:
+          type: string
+          format: uri
+          description: URI reference that identifies the specific occurrence of the problem
+    ValidationProblem:
+      type: object
+      allOf:
+        - $ref: '#/components/schemas/Problem'
+      properties:
+        errors:
+          type: array
+          description: A list of validation errors
+          items:
+            $ref: '#/components/schemas/ValidationError'
+      example:
+        type: about:blank
+        status: 400
+        title: One or more validation errors occurred
+        errors:
+          - name: publicAddress
+            reason: Public address is required
+          - name: signature
+            reason: Signature is required
+    ValidationError:
+      type: object
+      properties:
+        name:
+          type: string
+          description: The name of the field that caused the error
+        reason:
+          type: string
+          description: The reason why the field caused the error
     PublicAddress:
       type: string
-      description: The public address of the user.
+      description: The public address of the user
     AuthBeginRequest:
       type: object
       required:
@@ -103,6 +220,9 @@ components:
       properties:
         publicAddress:
           $ref: '#/components/schemas/PublicAddress'
+        message:
+          type: string
+          description: The signed message used in verification
         signature:
           type: string
           description: The signature signed using the nonce
