# src/shared/types/problem.ts
@@ -1,0 +1,4 @@
+import { components } from 'data/openapi/openapi';
+
+export type Problem = components['schemas']['Problem'];
+export type ValidationProblem = components['schemas']['ValidationProblem'];
